public/stylesheets/style.css
:root {
  /* CSS HEX */
  /* Git Social Dark color scheme */
  --liver-organ: #752f22ff;
  --primary-color: #fce138;
  --eerie-black: #1a1d19ff;
  --middle-grey: #7f786fff;
  --indigo-dye: #124568ff;
  --black-chocolate: #21221bff;
  --color-canvas-default: #ffffff;

  /* Git Social Light color scheme */
  --myrtle-green: #37756cff;
  --green-pigment: #2ea04fff;
  --ivory: #f7f8ebff;
  --kombu-green: #3a3e27ff;

  /* Github body background color */
  --color-canvas-default: #ffffff;
  --color-fg-default: #24292f;
  --color-header-bg: #24292f;
}

@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Poppins:400,500&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  user-select: none;
}

/* Github Style */
body {
  /* font-family:  */
  font-size: 14px;
  line-height: 1.5;
  /* color: var(--eerie-black); */
  background-color: var(--color-canvas-default);
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
section {
  display: block;
}

nav {
  /* -webkit-box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%), 0 1px 5px 0 rgb(0 0 0 / 20%); */
  box-shadow: none;
}

/* nav .brand-logo {
  color: var(--eerie-black);
} */

/* nav a {
  color: var(--eerie-black);
} */

ul,
ol {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

label {
  font-weight: 600;
}

button,
select {
  text-transform: none;
}

button {
  cursor: pointer;
  border-radius: 0;
}

button,
input {
  overflow: visible;
}

button,
input,
select,
textarea {
  font: inherit;
  margin: 0;
}

input,
select,
textarea,
button {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

p {
  margin-top: 0;
  margin-bottom: 10px;
}

.page-container {
  position: relative;
  min-height: 100vh;
}
.content-wrap {
  padding-bottom: 2.5rem; /* Footer height */
}
footer.page-footer {
  margin: 0;
  /* keep footer at the bottom */
  position: absolute;
  /* bottom: 0;  */
  width: 100%;
  /* height: 2.5rem; Footer height */
}

.page-footer {
  background-color: var(--eerie-black);
}
.comment-button {
  /* #BDCA9A */
  background-color: var(--green-pigment);
}
.logout-button {
  background-color: var(--liver-organ);
}
.card {
  background-color: var(--middle-grey);
}

.main-background-image {
  background: url("../images/kyle-sung-oQuP_XBjOMY-unsplash.jpg");
  height: 100vh;
  background-size: cover;
  background-position: center;
}
/* Materialize Styling  */
/* ===================================== */
/* nav ul a,
nav .brand-logo {
  color: #444;
} */

/* p {
  line-height: 2rem;
} */
/* ===================================== */

/*
 * WELCOME  PAGE STYLES ===START=== 
 */
/* Github Style */
/* TEXT */
.text-center {
  text-align: center !important;
}
.text-gray-light-mktg {
  color: #8193b2 !important;
}
.text-normal {
  font-weight: 400 !important;
}

/* FONTS */
/* "Time to Git Social */
.font-mktg {
  font-family: "Alliance1", "Alliance1Fallback", -apple-system,
    BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  word-break: keep-all;
}
.f4-mktg {
  font-size: 16px !important;
  line-height: 24px !important;
}
.f0-mktg,
.f1-mktg,
.f2-mktg,
.f3-mktg,
.f4-mktg,
.f5-mktg,
.f6-mktg {
  font-family: "Alliance1", "Alliance1Fallback", -apple-system,
    BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-feature-settings: "ss02" on, "ss01" on;
  font-weight: 400;
}
.h1-mktg,
.h2-mktg,
.h3-mktg,
.h4-mktg,
.h5-mktg {
  font-family: "Alliance1", "Alliance1HeaderFallback", -apple-system,
    BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-feature-settings: unset;
}
.h2-mktg {
  font-size: 32px !important;
  line-height: 36px !important;
  font-weight: 800 !important;
}
.f2-mktg {
  font-size: 20px !important;
  line-height: 28px !important;
}
.f4 {
  font-size: 16px !important;
}

/* SIGN UP FORM */
.f0-mktg,
.f1-mktg,
.f2-mktg,
.f3-mktg,
.f4-mktg,
.f5-mktg,
.f6-mktg {
  font-feature-settings: unset;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  word-wrap: normal;
  border: 0;
}

/* SIGN UP BUTTON */
.form-control,
.form-select {
  padding: 5px 12px;
  font-size: 14px;
  line-height: 20px;
  color: var(--eerie-black);
  vertical-align: middle;
  background-color: var(--color-canvas-default);
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid var(--color-border-default);
  border-radius: 6px;
  box-shadow: var(--color-primer-shadow-inset);
  transition: 80ms cubic-bezier(0.33, 1, 0.68, 1);
  transition-property: color, background-color, box-shadow, border-color;
}
.border-0 {
  border: 0 !important;
}
.btn-mktg {
  position: relative;
  z-index: 1;
  display: inline-block;
  padding: 0.9rem 1.5rem 1.1rem;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1;
  color: var(--color-canvas-default);
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  user-select: none;
  background: linear-gradient(
      180deg,
      rgba(255, 255, 255, 0.15) 0%,
      rgba(255, 255, 255, 0) 100%
    ),
    var(--color-mktg-btn-bg) !important;
  border: 0;
  border-radius: 0.375rem;
  transition: box-shadow 0.2s, outline 0.2s ease;
  -webkit-appearance: none !important;
  appearance: none !important;
}
.btn-signup-mktg {
  color: #fff;
  background: linear-gradient(
      180deg,
      rgba(52, 183, 89, 0.15) 0%,
      rgba(46, 164, 79, 0) 100%
    ),
    #2ea44f !important;
}
.btn-mktg {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

/* video styles */
.animation-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  /* position: relative; */
  overflow: hidden;
  /* color: rgba(255, 255, 255, 0.9); */
}
/* ... */

